CRUD register, login, user and people
